# char-transformer-from-scratch

./: .gitignore  DOCUMENTATION.md  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
figures/: metrics.json
scripts/: download_data.py  evaluate.py  explore_data.py  generate.py  train.py
src/char_transformer/: __init__.py  checkpoint.py  config.py  data.py  evaluation.py  logging_utils.py  lr_schedule.py  model.py  plotting.py  tokenizer.py  trainer.py  utils.py
tests/: test_checkpoint.py  test_data.py  test_evaluation.py  test_lr_schedule.py  test_model.py  test_tokenizer.py  test_trainer.py  test_utils.py
