[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "char-transformer"
version = "0.1.0"
description = "Decoder-only Transformer built from scratch in PyTorch for character-level text generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "tqdm==4.66.4",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
